# ItsNotAI-Model-Training

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run_dashboard.py  test_dashboard.py
.streamlit/: config.toml
huggingface/: README.md  README_v2.md  app.py  app_v2.py  deploy_to_spaces.py  fix_config.py  fix_labels.py  handler.py  requirements.txt  revert_labels.py  test_images.py  update_model_readme.py  upload_source_meta.py
notebooks/: train_vit_colab.ipynb  train_vit_colab.md
src/: test.ipynb
src/dataset/: combined_dataset.py  download_datasets.py  test_dataset.py
src/evaluation/: benchmark.py
src/mlflow/: dashboard.py  main.py
src/models/: api_providers.py  hf_models.py  langchain.py  model_api.py  vit_detector.py
src/training/: __init__.py  config.py  train_vit.py
src/utils/: data_utils.py  model_utils.py
