[project]
name = "itsnotai-model-backend"
version = "0.1.0"
description = "Evaluate models to detect AI-generated images."
authors = ["Han Xi <xihan99425@gmail.com>"]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "scikit-learn",
    "tqdm",
    "wandb",
    "python-dotenv",
    "pillow",
    "transformers"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
